Rotten and fear of type wounds

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -59,7 +59,7 @@
 
 #define NFW_FLOAT_TEXT_CONDITIONAL X Y MSG COLOR
     [if]
-        {VARIABLE_CONDITIONAL nfwe_float_text equals no}
+        {VARIABLE_CONDITIONAL nfwe_float_text equals yes}
         [then]
             [scroll_to_unit]
                 x,y={X},{Y}
