--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -11,6 +11,10 @@
         type=$unit.type
         variable=nfwe_unit_type
     [/store_unit_type]
+    [store_unit_type]
+        type=$second_unit.type
+        variable=nfwe_second_unit_type
+    [/store_unit_type]
 [/event]
 
 # filter plagueable plagued units
@@ -94,6 +98,9 @@
     [/filter_condition]
     [filter]
         race=mechanical
+        [or]
+            trait=mechanical
+        [/or]
     [/filter]
     {VARIABLE_OP rand_wound rand "1..20"}
     [switch]
@@ -123,7 +130,13 @@
             {VARIABLE nfw_already_wound yes}
         [/case]
         [case]
-            value=11,12,13,14,15
+            value=11,12
+            {NFW_rotten_WOUND}
+            {VARIABLE nfw_already_wound no}
+        [/case]
+
+        [case]
+            value=13,14,15,16
             [if]
                 {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
                 [then]
@@ -135,13 +148,6 @@
                     [then]
                         {NFW_frostbite_WOUND}
                         {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-                [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
-                    [then]
-                        {NFW_gash_WOUND}
-                        {VARIABLE rand_wound_repeat no}
                     [/then]
                 [/elseif]
                 [elseif]
@@ -164,6 +170,23 @@
                         {VARIABLE nfw_already_wound yes}
                     [/then]
                 [/elseif]
+                [elseif]
+                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
+                    [or]
+                        {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals arcane}
+                    [/or]
+                    [then]
+                        {NFW_rotten_WOUND}
+                        {VARIABLE nfw_already_wound yes}
+                    [/then]
+                [/elseif]
+                [elseif]
+                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
+                    [then]
+                        {NFW_gash_WOUND}
+                        {VARIABLE nfw_already_wound yes}
+                    [/then]
+                [/elseif]
                 [else]
                     {NFW_damaged_WOUND}
                     {VARIABLE nfw_already_wound yes}
@@ -171,7 +194,7 @@
             [/if]
         [/case]
         [case]
-            value=16,17,18,19,20
+            value=17,18,19,20
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -1236,6 +1259,21 @@
                         [/have_location]
                         [else]
                             {NFW_fear_of_weapon_WOUND}
+                            {VARIABLE rand_wound_repeat no}
+                        [/else]
+                    [/if]
+                [/case]
+                [case]
+                    value=46,47,48
+                    [if]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                ability=nfw_scared_of_type
+                            [/filter]
+                        [/have_location]
+                        [else]
+                            {NFW_fear_of_type_WOUND}
                             {VARIABLE rand_wound_repeat no}
                         [/else]
                     [/if]
