--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -571,6 +571,64 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
+# fear of type
+[event]
+    name=last_breath
+    id=nfwme_fear_of_type_healing
+    first_time_only=no
+    [filter]
+        type=$second_unit.variables.scary_type
+    [/filter]
+    {VARIABLE_OP rand_heal_fear rand(1..5)}
+    [filter_second]
+        ability=nfw_scared_of_type
+        [or]
+            [filter_wml]
+                [modifications]
+                    [object]
+                        id=fear_of_type
+                    [/object]
+                [/modifications]
+            [/filter_wml]
+        [/or]
+    [/filter_second]
+
+    [switch]
+        variable=rand_heal_fear
+        [case]
+            value=1
+            [remove_object]
+                {EVENT_SECOND_UNIT}
+                object_id=fear_of_type
+            [/remove_object]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from fear of $second_unit.variables.scary_type_translated"
+                female_text=_"female^Recovered from fear of $second_unit.variables.scary_type_translated"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
+            [modify_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                {CLEAR_VARIABLE scary_type}
+                {CLEAR_VARIABLE scary_type_translated}
+            [/modify_unit]
+        [/case]
+    [/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
+[/event]
+
 # fear of light
 [event]
     name=last_breath
