--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -370,7 +370,6 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
 
 # only can get one, to avoid variable conflicts
 #define NFW_fear_of_weapon_WOUND
-    #textdomain wesnoth-Non_Fatal_Wounds
     [modify_unit]
         {FILTER_EVENT_UNIT}
         [object]
@@ -422,6 +421,57 @@ Face your fears and defeat them to try to overcome them."
     [/modify_unit]
 
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $second_weapon.description" {NFW_COLOR_RED}}
+#enddef
+
+# only can get one, to avoid variable conflicts
+#define NFW_fear_of_type_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [object]
+            id=fear_of_type
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [display]
+                        id=nfw_scared_of_type
+                        name="<span color='#DA0000'>"+_"weakness"+"</span>"
+                        description=_"-50% strikes and -30% accuracy when facing a $nfwe_second_unit_type.name|.
+Face your fears and defeat them to try to overcome them."
+                    [/display]
+                [/abilities]
+            [/effect]
+            [effect]
+                apply_to=attack
+                [set_specials]
+                    mode=append
+                    [attacks]
+                        id=nfw_scared_of_type_attacks
+                        [filter_opponent]
+                            type=$nfwe_second_unit_type.id
+                        [/filter_opponent]
+                        divide=2
+                    [/attacks]
+                    [chance_to_hit]
+                        id=nfw_scared_of_type_chance
+                        [filter_opponent]
+                            type=$nfwe_second_unit_type.id
+                        [/filter_opponent]
+                        sub=30
+                    [/chance_to_hit]
+                [/set_specials]
+            [/effect]
+        [/object]
+        [set_variable]
+            name=scary_type
+            value=$nfwe_second_unit_type.id
+        [/set_variable]
+        [set_variable]
+            name=scary_type_translated
+            value=$nfwe_second_unit_type.name
+        [/set_variable]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $nfwe_second_unit_type.name" {NFW_COLOR_RED}}
 #enddef
 
 # stackable
@@ -924,8 +974,7 @@ Face your fears to try to overcome them."
                         id=necrosis_display
                         name="<span color='#DA0000'>"+_"necrotic"+"</span>"
                         female_name="<span color='#DA0000'>"+_"female^necrotic"+"</span>"
-                        description=_"You are closer to undeath.
-Arcane resistance -40%"
+                        description=_"Arcane resistance -40%"
                     [/display]
                 [/abilities]
             [/effect]
@@ -954,6 +1003,51 @@ Arcane resistance -40%"
         [/object]
     [/modify_unit]
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Necrosis" {NFW_COLOR_RED}}
+#enddef
+
+# stackable
+#define NFW_rotten_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [object]
+            id=necrosis
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [display]
+                        id=necrosis_display
+                        name="<span color='#DA0000'>"+_"rotten"+"</span>"
+                        female_name="<span color='#DA0000'>"+_"female^rotten"+"</span>"
+                        description=_"Arcane and impact resistance -20%"
+                    [/display]
+                [/abilities]
+            [/effect]
+            [effect]
+                apply_to=resistance
+                replace=no
+                [resistance]
+                    arcane=20
+                    impact=20
+                [/resistance]
+            [/effect]
+            [effect]
+                apply_to=new_advancement
+                [advancement]
+                    id=NFW_neccrosis_Healing
+                    description= _"Recover from rot"
+                    [effect]
+                        apply_to=new_ability
+                        [abilities]
+                            [display]
+                                id=necrosis_display_healing
+                            [/display]
+                        [/abilities]
+                    [/effect]
+                [/advancement]
+            [/effect]
+        [/object]
+    [/modify_unit]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Rot" {NFW_COLOR_RED}}
 #enddef
 
 # not stackable
