--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -55,6 +55,7 @@
 * <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random
 * <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative
 * <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, wounded with any weapon
+* <b><i>Fear of type</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy
 * <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive
 * <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative
 * <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative
@@ -64,7 +65,8 @@
 * <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random but more probable if slowed
 * <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability
 * <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative
-* <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative
+* <b><i>Necrosis</i></b> (-40% arcane resistance) > All units, random, cumulative
+* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random, cumulative
 * <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative
 * <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
                     side_for=$side_number
@@ -83,6 +85,7 @@
 
 * <b><i>Fear of terrain</i></b>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
 * <b><i>Fear of weapon</i></b>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
+* <b><i>Fear of type</i></b>: 20% chance of recovery when defeating an opponent of this type.
 * <b><i>Fear of light/dark</i></b>: 5% chance of recovery when defeating an opponent during the day/night.
 * <b><i>Fear of fog</i></b>: 10% chance of recovery when defeating an opponent when fog is active.
 * <b><i>Cowardice</i></b>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
