Help/readme revision

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -120,23 +120,23 @@
             [/if]
         [/case]
         [case]
-            value=5,6,7,8
+            value=5,6,7
             {NFW_damaged_WOUND}
             {VARIABLE nfw_already_wound yes}
         [/case]
         [case]
-            value=9,10
+            value=8,9
             {NFW_captured_WOUND}
             {VARIABLE nfw_already_wound yes}
         [/case]
         [case]
-            value=11,12
+            value=10,11
             {NFW_rotten_WOUND}
-            {VARIABLE nfw_already_wound no}
+            {VARIABLE nfw_already_wound yes}
         [/case]
 
         [case]
-            value=13,14,15,16
+            value=12,13,14,15
             [if]
                 {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
                 [then]
@@ -194,7 +194,7 @@
             [/if]
         [/case]
         [case]
-            value=17,18,19,20
+            value=16,17,18,19,20
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -218,8 +218,15 @@
                             {NFW_damaged_WOUND}
                             {VARIABLE nfw_already_wound yes}
                         [/then]
+                        [elseif]
+							{VARIABLE_CONDITIONAL rand_wound greater_than 18}
+							[then]
+								{NFW_amnesia_WOUND}
+								{VARIABLE nfw_already_wound yes}
+							[/then]
+                        [/elseif]
                         [else]
-                            {NFW_amnesia_WOUND}
+                            {NFW_damaged_WOUND}
                             {VARIABLE nfw_already_wound yes}
                         [/else]
                     [/if]
@@ -750,6 +757,48 @@
     [/switch]
 [/event]
 
+# filter funny wounds
+[event]
+    name=last_breath
+    id=nfwme_funny_wounds
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
+		{NFW_funny_ENABLED}
+    [/filter_condition]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+    [filter]
+        [not]
+            id=Sister Thera,Father Morvin
+        [/not]
+    [/filter]
+#endif
+    {VARIABLE_OP rand_wound rand "1..10"}
+    [switch]
+        variable=rand_wound
+		 [case]
+			value=1
+			[if]
+				{NFW_funny_ENABLED}
+				[then]
+					{NFW_paper_cut_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+				[/then]
+			[/if]
+		[/case]
+		[case]
+			value=2
+			[if]
+				{NFW_funny_ENABLED}
+				[then]
+					{NFW_stepped_on_lego_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+				[/then]
+			[/if]
+		[/case]
+    [/switch]
+[/event]
+
 # random wound table
 [event]
     name=last_breath
@@ -789,7 +838,7 @@
     [while]
         {VARIABLE_CONDITIONAL rand_wound_repeat equals yes}
         [do]
-            {VARIABLE_OP rand_wound rand "1..100"}
+            {VARIABLE_OP rand_wound rand "1..97"}
             [switch]
                 variable=rand_wound
                 [case]
@@ -1264,21 +1313,6 @@
                     [/if]
                 [/case]
                 [case]
-                    value=46,47,48
-                    [if]
-                        [have_location]
-                            {EVENT_UNIT}
-                            [filter]
-                                ability=nfw_scared_of_type
-                            [/filter]
-                        [/have_location]
-                        [else]
-                            {NFW_fear_of_type_WOUND}
-                            {VARIABLE rand_wound_repeat no}
-                        [/else]
-                    [/if]
-                [/case]
-                [case]
                     value=49,50
                     {NFW_maimed_WOUND}
                     {VARIABLE rand_wound_repeat no}
@@ -1346,12 +1380,12 @@
                     [/if]
                 [/case]
                 [case]
-                    value=87
+                    value=85
                     {NFW_necrosis_WOUND}
                     {VARIABLE rand_wound_repeat no}
                 [/case]
                 [case]
-                    value=88,89,90,91
+                    value=86,87,88,89
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1366,27 +1400,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=92,93,94,95
-                    [if]
-                        {NFW_funny_ENABLED}
-                        [then]
-                            {NFW_paper_cut_WOUND}
-                            {VARIABLE rand_wound_repeat no}
-                        [/then]
-                    [/if]
-                [/case]
-                [case]
-                    value=96,97,98
-                    [if]
-                        {NFW_funny_ENABLED}
-                        [then]
-                            {NFW_stepped_on_lego_WOUND}
-                            {VARIABLE rand_wound_repeat no}
-                        [/then]
-                    [/if]
-                [/case]
-                [case]
-                    value=99,100,85,86
+                    value==90,91,92,93
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1400,6 +1414,21 @@
                             {NFW_fear_of_fog_WOUND}
                             {VARIABLE rand_wound_repeat no}
                         [/then]
+                    [/if]
+                [/case]
+                [case]
+                    value=94,95,96,97
+                    [if]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                ability=nfw_scared_of_type
+                            [/filter]
+                        [/have_location]
+                        [else]
+                            {NFW_fear_of_type_WOUND}
+                            {VARIABLE rand_wound_repeat no}
+                        [/else]
                     [/if]
                 [/case]
             [/switch]
