--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -42,6 +42,17 @@
 #enddef
 
 #define NFW_retreat_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+		[effect]
+			apply_to=new_ability
+			[abilities]
+				[display]
+					id=nfw_retreating
+				[/display]
+			[/abilities]
+		[/effect]
+    [/modify_unit]
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Retreat" {NFW_COLOR_RED}}
 #enddef
 
@@ -988,7 +999,7 @@ Face your fears to try to overcome them."
             [effect]
                 apply_to=new_advancement
                 [advancement]
-                    id=NFW_neccrosis_Healing
+                    id=NFW_necrosis_Healing
                     description= _"Recover from necrosis"
                     [effect]
                         apply_to=new_ability
@@ -1033,7 +1044,7 @@ Face your fears to try to overcome them."
             [effect]
                 apply_to=new_advancement
                 [advancement]
-                    id=NFW_neccrosis_Healing
+                    id=NFW_necrosis_Healing
                     description= _"Recover from rot"
                     [effect]
                         apply_to=new_ability
