--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -17,16 +17,30 @@
 [event]
     name=nfw_disable_for_this_scenario
     [remove_event]
-        id=nfw_catch_last_breath
-    [/remove_event]
-    [remove_event]
-        id=nfwe_rand_wound_table,nfwme_death_wounds,nfwme_elemental_wounds,nfwme_captured_heroes_wound,nfwme_mechanical_wound
+        id=nfw_catch_last_breath,nfwe_rand_wound_table,nfwme_death_wounds,nfwme_elemental_wounds,nfwme_captured_heroes_wound,nfwme_mechanical_wound,nfwme_funny_wounds,nfwme_wound_filter
     [/remove_event]
     [event]
-        name=nfwe_rand_wound
-        id=nfwe_rand_wound_table
+        name=last_breath
+        id=nfw_disabled
         first_time_only=no
-        {NFW_dead_WOUND}
+		[filter_condition]
+			{VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
+		[/filter_condition]
+		[if]
+            [have_location]
+                {EVENT_UNIT}
+                [filter]
+                    race=mechanical
+                [/filter]
+            [/have_location]
+			[then]
+				{NFW_destroyed_WOUND}
+			[/then]
+			[else]
+				{NFW_dead_WOUND}
+			[/else]
+		[/if]
+	    {CLEAR_VARIABLE nfw_already_wound}
     [/event]
     {CLEAR_VARIABLE nfw_wounded}
 [/event]
@@ -58,7 +72,6 @@
     name=nfw_dialogue_on_death
     first_time_only=no
     [filter_condition]
-        {NFW_wounds_ENABLED}
         {VARIABLE_CONDITIONAL nfw_no_dialog not_equals yes}
         {VARIABLE_CONDITIONAL nfw_dialog_manual equals yes}
     [/filter_condition]
@@ -68,6 +81,16 @@
             controller=human
         [/filter_side]
     [/filter]
+	[if]
+		# Compare with empty var, never use nfw_empty_var as variable
+		[variable]
+			name=unit.name
+			equals=$nfw_empty_var
+		[/variable]
+		[then]
+			{VARIABLE unit.name _"This unit"}
+		[/then]
+	[/if]
     [if]
         [have_location]
             {EVENT_UNIT}
@@ -118,9 +141,6 @@
                 {EVENT_UNIT}
                 [filter]
                     trait=ghost_trait
-                    [not]
-                        race=mechanical
-                    [/not]
                 [/filter]
             [/have_location]
             [then]
@@ -141,9 +161,6 @@
                 {EVENT_UNIT}
                 [filter]
                     trait=nfw_plagued
-                    [not]
-                        race=mechanical
-                    [/not]
                 [/filter]
             [/have_location]
             [then]
@@ -163,46 +180,80 @@
                 {EVENT_UNIT}
                 [filter]
                     ability=captured_unit_display
-                    [not]
-                        race=mechanical
-                    [/not]
                 [/filter]
             [/have_location]
             [then]
+				[if]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]
+							[not]
+								race=mechanical
+							[/not]
+						[/filter]
+					[/have_location]
+					[then]
+						[message]
+							speaker=$unit.id
+							message= _ "Please rescue me!"
+							female_message= _ "female^Please rescue me!"
+						[/message]
+					[/then]
+				[/if]
                 [message]
                     speaker=$unit.id
-                    message= _ "Please rescue me!"
-                    female_message= _ "female^Please rescue me!"
-                [/message]
-                [message]
-                    speaker=$unit.id
-                    message= _ "$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to pay a ransom."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was captured by the enemy. You will have to pay a ransom."
+                    message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                    female_message= _ "female^$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
                 [/message]
             [/then]
         [/elseif]
+        [elseif]
+			[have_location]
+				{EVENT_UNIT}
+				[filter]
+					race=mechanical
+				[/filter]
+			[/have_location]
+			[then]
+				[message]
+					speaker=$unit.id
+					message= _ "Crash!"
+				[/message]
+			[/then]
+        [/elseif]
+        [elseif]
+			{VARIABLE_CONDITIONAL nfwe_deadundead greater_than 0}
+            [have_location]
+                {EVENT_UNIT}
+                [filter]
+                    ability=nfw_retreating
+                [/filter]
+            [/have_location]			
+            [then]
+                [message]
+                    speaker=$unit.id
+                    message= _ "I can't fight anymore, I retreat!"
+                    female_message= _ "female^I can't fight anymore, I retreat!"
+                [/message]
+				[modify_unit]
+					{FILTER_EVENT_UNIT}
+					[effect]
+						apply_to=remove_ability
+						[abilities]
+							[display]
+								id=nfw_retreating
+							[/display]
+						[/abilities]
+					[/effect]
+				[/modify_unit]
+            [/then]
+        [/elseif]
         [else]
-            [if]
-                [have_location]
-                    {EVENT_UNIT}
-                    [filter]
-                        race=mechanical
-                    [/filter]
-                [/have_location]
-                [then]
-                    [message]
-                        speaker=$unit.id
-                        message= _ "Crash!"
-                    [/message]
-                [/then]
-                [else]
-                    [message]
-                        speaker=$unit.id
-                        message= _ "Argh, I’m wounded!"
-                        female_message= _ "female^Argh, I’m wounded!"
-                    [/message]
-                [/else]
-            [/if]
+			[message]
+				speaker=$unit.id
+				message= _ "Argh, I’m wounded!"
+				female_message= _ "female^Argh, I’m wounded!"
+			[/message]
         [/else]
     [/if]
     [if]
