--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -35,72 +35,6 @@
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
-            label="<b>»</b> "+_"List of Wounds"
-            default=yes
-            [command]
-                [message]
-                    speaker=narrator
-                    font_size=smaller
-                    message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative</b>
-
-* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random
-* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random
-* <b><i>Broken arm</i></b> (-30% non-magical damage) > Races with arms, random, cumulative
-* <b><i>Broken wing</i></b> (-40% mp) > Races with wings, random, cumulative
-* <b><i>Broken leg</i></b> (-30% mp) > Races with legs, random, cumulative
-* <b><i>Broken rib</i></b> (-40% impact resistance) > Not mechanical or spirits, random but more probable with impact attack, cumulative
-* <b><i>Burn</i></b> (-40% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire, cumulative
-* <b><i>Capture</i></b> (increased recall cost based on level) > All units, random but more probable on leaders and heroes
-* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative
-* <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random
-* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative
-* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, wounded with any weapon
-* <b><i>Fear of type</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy
-* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive
-* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative
-* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative
-* <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative
-* <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade attack, cumulative
-* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
-* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random but more probable if slowed
-* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability
-* <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative
-* <b><i>Necrosis</i></b> (-40% arcane resistance) > All units, random, cumulative
-* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random, cumulative
-* <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative
-* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
-                    side_for=$side_number
-                    image="misc/nfw-icon.png"
-                    {NFW_MENU_EXIT}
-                [/message]
-            [/command]
-        [/option]
-        [option]
-            label="<b>»</b> "+_"List of healing methods"
-            default=yes
-            [command]
-                [message]
-                    speaker=narrator
-                    message=_"<b>Wounds healing:</b>
-
-* <b><i>Fear of terrain</i></b>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
-* <b><i>Fear of weapon</i></b>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
-* <b><i>Fear of type</i></b>: 20% chance of recovery when defeating an opponent of this type.
-* <b><i>Fear of light/dark</i></b>: 5% chance of recovery when defeating an opponent during the day/night.
-* <b><i>Fear of fog</i></b>: 10% chance of recovery when defeating an opponent when fog is active.
-* <b><i>Cowardice</i></b>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
-* <b><i>Short-term memory loss</i></b>: is a single use wound and is healed inmediately.
-* <b><i>Capture</i></b>: is a single use wound and is healed when the unit is recalled the first time.
-* The rest of wounds can be healed choosing a recover AMLA instead of the advancement or default AMLA (still can advance later to the next advancement).
-* Only one wound of the same type can be healed at a time and they can be stacked indefinitely with cumulative effects if is allowed.
-* Optional wounds can't be healed at all."
-                    side_for=$side_number
-                    image="misc/nfw-icon.png"
-                    {NFW_MENU_EXIT}
-                [/message]
-            [/command]
-        [/option]
-        [option]
             label="<b>»</b> "+_"Change status of Wounds"
             [command]
                 [message]
@@ -196,6 +130,72 @@
                 [/message]
             [/command]
         [/option]
+        [option]
+            label="<b>»</b> "+_"List of Wounds"
+            default=yes
+            [command]
+                [message]
+                    speaker=narrator
+                    font_size=smaller
+                    message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative</b>
+
+* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random
+* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random
+* <b><i>Broken arm</i></b> (-30% non-magical damage) > Races with arms, random, cumulative
+* <b><i>Broken wing</i></b> (-40% mp) > Races with wings, random, cumulative
+* <b><i>Broken leg</i></b> (-30% mp) > Races with legs, random, cumulative
+* <b><i>Broken rib</i></b> (-40% impact resistance) > Not mechanical or spirits, random but more probable with impact attack, cumulative
+* <b><i>Burn</i></b> (-40% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire, cumulative
+* <b><i>Capture</i></b> (increased recall cost based on level) > All units, random but more probable on leaders and heroes
+* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative
+* <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random
+* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative
+* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon
+* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy
+* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive
+* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative
+* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative
+* <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative
+* <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade attack, cumulative
+* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
+* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random but more probable if slowed
+* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability
+* <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative
+* <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative
+* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random but more probable with impact or arcane attack, cumulative
+* <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative
+* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
+                    side_for=$side_number
+                    image="misc/nfw-icon.png"
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        [option]
+            label="<b>»</b> "+_"List of healing methods"
+            default=yes
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"<b>Wounds healing:</b>
+
+* <b><i>Fear of terrain</i></b>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
+* <b><i>Fear of weapon</i></b>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
+* <b><i>Fear of enemy</i></b>: 20% chance of recovery when defeating an opponent of same type the unit is scared of.
+* <b><i>Fear of light/dark</i></b>: 5% chance of recovery when defeating an opponent during the day/night.
+* <b><i>Fear of fog</i></b>: 10% chance of recovery when defeating an opponent when fog is active.
+* <b><i>Cowardice</i></b>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
+* <b><i>Short-term memory loss</i></b>: is a single use wound and is healed inmediately.
+* <b><i>Capture</i></b>: is a single use wound and is healed when the unit is recalled the first time.
+* The rest of wounds can be healed choosing a recover AMLA instead of the advancement or default AMLA (still can advance later to the next advancement).
+* Only one wound of the same type can be healed at a time and they can be stacked indefinitely with cumulative effects if is allowed.
+* Optional wounds can't be healed at all."
+                    side_for=$side_number
+                    image="misc/nfw-icon.png"
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
         {NFW_MENU_EXIT}
     [/message]
 #enddef
@@ -266,25 +266,6 @@
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
-            label="<b>»</b> "+_"List of elemental transformations"
-            [command]
-                [message]
-                    speaker=narrator
-                    message=_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
-
-* <b><i><span color='#FF6400'>Fire elemental</span></i></b> +30% fire resistance +All attacks changed to fire -35% damage -35% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
-* <b><i><span color='#0064FF'>Water elemental</span></i></b> +30% cold resistance +All attacks changed to cold and have slow ability -50% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
-* <b><i><span color='#00AF00'>Poison elemental</span></i></b> +30% pierce resistance +All attacks changed to pierce with poison -40% damage -50% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
-* <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
-* <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
-* <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
-* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
-                    image="misc/nfw-icon.png"
-                    {NFW_MENU_EXIT}
-                [/message]
-            [/command]
-        [/option]
-        [option]
             label="<b>»</b> "+_"Change status of Elementals"
             [command]
                 [message]
@@ -309,6 +290,25 @@
                             [/set_variable]
                         [/command]
                     [/option]
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        [option]
+            label="<b>»</b> "+_"List of elemental transformations"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
+
+* <b><i><span color='#FF6400'>Fire elemental</span></i></b> +30% fire resistance +All attacks changed to fire -35% damage -35% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
+* <b><i><span color='#0064FF'>Water elemental</span></i></b> +30% cold resistance +All attacks changed to cold and have slow ability -50% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
+* <b><i><span color='#00AF00'>Poison elemental</span></i></b> +30% pierce resistance +All attacks changed to pierce with poison -40% damage -50% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
+* <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
+* <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
+* <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
+* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
+                    image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
                 [/message]
             [/command]
