Filtered mechanical by race and trait

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -68,6 +68,7 @@
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
+		{NFW_wounds_ENABLED}
     [/filter_condition]
     [filter]
         {NFW_FILTER_HEROES}
@@ -95,6 +96,7 @@
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
+		{NFW_wounds_ENABLED}
     [/filter_condition]
     [filter]
         race=mechanical
@@ -245,18 +247,13 @@
         {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
         {VARIABLE_CONDITIONAL nfwe_deadundead greater_than 0}
     [/filter_condition]
-
-    [filter]
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
+    [filter]
         [not]
             id=Sister Thera,Father Morvin
         [/not]
-#endif
-        [not]
-            race=mechanical
-        [/not]
     [/filter]
-
+#endif
     {VARIABLE_OP rand_wound rand "1..21"}
     [switch]
         variable=rand_wound
@@ -367,7 +364,7 @@
             race=mechanical,undead
         [/not]
         [not]
-            trait=ghost_trait,undead,elemental
+            trait=ghost_trait,undead,elemental,mechanical
         [/not]
     [/filter]
     {VARIABLE_OP rand_wound rand "1..40"}
