--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -31,6 +31,9 @@
                 {EVENT_UNIT}
                 [filter]
                     race=mechanical
+					[or]
+						trait=mechanical
+					[/or]
                 [/filter]
             [/have_location]
 			[then]
@@ -98,6 +101,9 @@
                 trait=nfw_dead
                 [not]
                     race=mechanical
+					[or]
+						trait=mechanical
+					[/or]
                 [/not]
             [/filter]
         [/have_location]
@@ -120,6 +126,9 @@
                     trait=nfwme_corpse
                     [not]
                         race=mechanical
+						[or]
+							trait=mechanical
+						[/or]
                     [/not]
                 [/filter]
             [/have_location]
@@ -189,6 +198,9 @@
 						[filter]
 							[not]
 								race=mechanical
+								[or]
+									trait=mechanical
+								[/or]
 							[/not]
 						[/filter]
 					[/have_location]
@@ -212,6 +224,9 @@
 				{EVENT_UNIT}
 				[filter]
 					race=mechanical
+					[or]
+						trait=mechanical
+					[/or]
 				[/filter]
 			[/have_location]
 			[then]
@@ -219,6 +234,21 @@
 					speaker=$unit.id
 					message= _ "Crash!"
 				[/message]
+				[if]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]
+							trait=nfw_dead
+						[/filter]
+					[/have_location]
+					[then]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+							female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
+						[/message]
+					[/then]
+				[/if]
 			[/then]
         [/elseif]
         [elseif]
